# Simplex

./: .clang-format  .gitmodules  CMakeLists.txt  main.pro  simplex.pro
3rdparties/: CMakeLists.txt
3rdparties/glad/include/glad/: gl.h
Debug/: Makefile
Debug/logger/: Makefile
Debug/renderer/: Makefile
Debug/starter/: Makefile
app/: app.pro
app/src/: main.cpp  main.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  testapplication.cpp  testapplication.h
audio_openal/: CMakeLists.txt
audio_openal/src/: openal_1_1_renderer.cpp  openal_1_1_renderer.h  openaldevice.cpp  openaldeviceprivate.cpp  openaldeviceprivate.h
compile/Debug/: liblogger.so.1.0.0  librenderer.so.1.0.0  starter
core/: CMakeLists.txt  core.pro
core/src/: ambientlightnode.cpp  ambientlightnodeprivate.cpp  ambientlightnodeprivate.h  animation.cpp  animationprivate.cpp  animationprivate.h  applicationbase.cpp  applicationbaseprivate.cpp  applicationbaseprivate.h  audioengine.cpp  audioengineprivate.cpp  audioengineprivate.h  audiorendererbase.cpp  audiorendererbaseprivate.cpp  audiorendererbaseprivate.h  background.cpp  backgrounddrawable.cpp  backgrounddrawable.h  backgrounddrawableprivate.cpp  backgrounddrawableprivate.h  backgroundprivate.cpp  backgroundprivate.h  bilaterialblur.cpp  bilaterialblur.h  blur.cpp  blur.h  bodynode.cpp  bodynodeprivate.cpp  bodynodeprivate.h  bonenode.cpp  bonenodeprivate.cpp  bonenodeprivate.h  cameranode.cpp  cameranodeprivate.cpp  cameranodeprivate.h  camerarenderinfo.cpp  camerarenderinfo.h  coloreddrawable.cpp  coloreddrawableprivate.cpp  coloreddrawableprivate.h  (+209 more)
core/src/gltf/: gltf.h
examples/: CMakeLists.txt
examples/empty_window/: CMakeLists.txt  main.cpp
examples/many_point_lights/: CMakeLists.txt  main.cpp
examples/shared_windows/: CMakeLists.txt  main.cpp
examples/simple_scene/: CMakeLists.txt  main.cpp
examples/teapot/: CMakeLists.txt  main.cpp
examples/two_windows/: CMakeLists.txt  main.cpp
graphics_glfw/: CMakeLists.txt
graphics_glfw/src/: glfwrenderer.cpp  glfwrenderer.h  glfwwidget.cpp  glfwwidgetprivate.cpp  glfwwidgetprivate.h  mvpstateset.cpp  mvpstateset.h
iblgenerator/: iblgenerator.pro
iblgenerator/src/: main.cpp
include/audio_openal/: forwarddecl.h  openaldevice.h  openalglobal.h
include/core/: Drawable.h  RenderProgramsManager.h  ambientlightnode.h  animation.h  applicationbase.h  audioengine.h  audiorendererbase.h  background.h  backgrounddrawable.h  bodynode.h  bonenode.h  cameranode.h  collectorvisitor.h  coloreddrawable.h  coloredlightnode.h  conditionalnodevisitor.h  coreglobal.h  debuginformation.h  directionallightnode.h  drawable.h  drawablebase.h  drawablenode.h  dynamicbodynode.h  flatdrawable.h  forwarddecl.h  frustumcullingnodevisitor.h  frustumcullingvisitor.h  graphicsengine.h  graphicsrendererbase.h  iapplication.h  iaudiodevice.h  iaudiorenderer.h  ibllightnode.h  idevice.h  idrawable.h  iengine.h  igraphicsrenderer.h  igraphicswidget.h  imagebasedlightnode.h  imagebasedllightnode.h  (+50 more)
include/graphics_glfw/: forwarddecl.h  glfwglobal.h  glfwwidget.h
include/loader_assimp/: assimpglobal.h  loader.h
include/logger/: abstractlog.h  logger.h  logger_global.h
include/openal/: forwarddecl.h  openaldevice.h  openalglobal.h
include/physics_bullet/: bulletglobal.h  bulletworld.h  forwarddecl.h
include/qt/: forwarddecl.h  openglwidget.h  qtglobal.h  qtopengl_1_0_renderer.h  qtopenglwidget.h  qtrenderwidget.h
include/renderer/: buffer.h  context.h  contextgroup.h  display.h  forwarddecl.h  framebuffer.h  program.h  renderbuffer.h  renderer_global.h  shader.h  texture.h  vertexarray.h
include/scenegraph/: abstractsceneoptimizer.h  drawable.h  forwarddecl.h  material.h  node.h  renderstate.h  scene.h  scenegraph_global.h
include/scenes_loader_assimp/: scenesloaderassimp.h  scenesloaderassimpglobal.h
include/types/: forwarddecl.h  geometry.h  image.h  renderstate.h
include/utils/: boundingbox.h  clipspace.h  combinatorics.h  connectable.h  cubemap.h  customdata.h  customdeleter.h  enumclass.h  epsilon.h  export.h  fileextension.h  forwarddecl.h  frustum.h  iblcalculator.h  idgenerator.h  image.h  imagemanager.h  line.h  linesegment.h  logger.h  mesh.h  meshpainter.h  noncopyble.h  orientedboundingbox.h  pimpl.h  plane.h  primitiveset.h  range.h  rectpacker.h  rigidtransform.h  settings.h  shader.h  singleton.h  singletoon.h  sortedobject.h  sound.h  soundmanager.h  textfile.h  transform.h  treenode.h  (+6 more)
loader_assimp/: CMakeLists.txt
loader_assimp/src/: loader.cpp
logger/: logger.pro
logger/src/: logger.cpp
openal/: CMakeLists.txt  openal.pro
openal/src/: openal_1_1_renderer.cpp  openal_1_1_renderer.h  openaldevice.cpp  openaldeviceprivate.cpp  openaldeviceprivate.h
physics_bullet/: CMakeLists.txt
physics_bullet/src/: bullet_3_renderer.cpp  bullet_3_renderer.h  bulletworld.cpp  bulletworldprivate.cpp  bulletworldprivate.h
qt/: CMakeLists.txt  qt.pro
qt/src/: mvpstateset.cpp  mvpstateset.h  openglwidget.cpp  openglwidgetprivate.cpp  openglwidgetprivate.h  qtopengl_1_0_renderer.cpp  qtopengl_4_5_renderer.cpp  qtopengl_4_5_renderer.h  qtopenglwidget.cpp  qtopenglwidgetprivate.cpp  qtopenglwidgetprivate.h  qtrenderwidget.cpp  qtrenderwidgetprivate.h
renderer/: renderer.pro
renderer/src/: buffer.cpp  buffer_p.cpp  buffer_p.h  (+36 more)
scenegraph/: scenegraph.pro
scenes_loader_assimp/: CMakeLists.txt
scenes_loader_assimp/src/: scenesloaderassimp.cpp
starter/: starter.pro  starter.qrc
utils/: CMakeLists.txt  utils.pro
utils/src/: boundingboxdata.h  bunnydata.h  cameradata.h  clipspace.cpp  cubedata.h  cubemap.cpp  iblcalculator.cpp  image.cpp  imageimpl.h  imagemanager.cpp  logger.cpp  mesh.cpp  meshimpl.h  meshpainter.cpp  monkeydata.h  normal.h  planedata.h  primitiveset.cpp  rectpacker.cpp  screenquaddata.h  settings.cpp  shader.cpp  sortedobject.cpp  sound.cpp  soundmanager.cpp  suzannedata.h  tangentspace.h  teapotdata.h  tetrahedrondata.h  textfile.cpp  triangledata.h  typeinfo.cpp  types.cpp
utils/src/smol-atlas/: smol-atlas.h
utils/src/wave/: file.cpp  file.h
(+203 files in other folders)
